<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_marginTop="10dp"
        android:padding="10dp">



        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:text="@string/txt_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text=" : "
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_column="0"
                android:text="@string/txt_author"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text=" : "
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </TableRow>

        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:text="@string/txt_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text=" : "
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

</LinearLayout>